# SearchGram

./: .dockerignore  .gitignore  Docker.md  Dockerfile  Makefile  README.md  docker-compose.legacy.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: FUNDING.yml  builder.yaml  codeql.yml
searchgram/: __init__.py  add_timestamp.py  bot.py  chatlist.ini  client.py  config.py  engine.py  es.py  history.py  init_client.py  meili.py  mongo.py  sync.ini  utils.py  zinc.py
searchgram/migrations/: add_timestamp.py  fix_None_username.py  rename_message_id.py
searchgram/session/: readme.txt
searchgram/tests/: __init__.py  tests.py
