[project]
name = "searchgram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coloredlogs==15.0.1",
    "fakeredis==2.21.0",
    "meilisearch==0.40.0",
    "pymongo==4.6.1",
    "pyrogram==2.0.106",
    "tgcrypto==1.2.5",
    "tqdm==4.66.1",
    "zhconv==1.4.3",
    "zincsearch-sdk==0.3.3",
]
